# TextRecognitionDataGenerator

./: .gitignore  pyproject.toml
trdg/: data_generator.py  run.py
