[tool.poetry]
name = "textrecognitiondatagenerator"
version = "0.1.0"
description = ""
authors = ["masashi kishimoto <drehbleistift@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = ">=7.0.0"
requests = ">=2.20.0"
opencv-python = ">=4.2.0.32"
tqdm = ">=4.23.0"
beautifulsoup4 = ">=4.6.0"
diffimg = "0.2.3"
arabic-reshaper = "2.1.3"
python-bidi = "0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
